log
   Compiling evdev-sys v0.2.6
   Compiling inotify-sys v0.1.5
   Compiling epoll v4.4.0
   Compiling evdev-rs v0.4.0
   Compiling inotify v0.8.3
   Compiling rdev v0.5.3
   Compiling ctrlset v0.1.0 (/home/hitler/workspace/code/ctrlsetty)
error[E0061]: this method takes 1 argument but 0 arguments were supplied
   --> src/main.rs:405:22
    |
405 |     let i = &mut ctx.input_mut();
    |                      ^^^^^^^^^-- argument #1 is missing
    |
note: method defined here
   --> /home/hitler/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/egui-0.27.2/src/context.rs:807:12
    |
807 |     pub fn input_mut<R>(&self, writer: impl FnOnce(&mut InputState) -> R) -> R {
    |            ^^^^^^^^^
help: provide the argument
    |
405 |     let i = &mut ctx.input_mut(/* writer */);
    |                                ++++++++++++

error[E0282]: type annotations needed for `&mut _`
   --> src/main.rs:405:9
    |
405 |     let i = &mut ctx.input_mut();
    |         ^
406 |     if i.consume_shortcut(&KeyboardShortcut::new(Modifiers::NONE, Key::Escape))
    |          ---------------- type must be known at this point
    |
help: consider giving `i` an explicit type, where the placeholders `_` are specified
    |
405 |     let i: &mut R = &mut ctx.input_mut();
    |          ++++++++

error[E0308]: mismatched types
   --> src/main.rs:417:45
    |
417 |             state.temp_edit_buffer.push_str(text);
    |                                    -------- ^^^^ expected `&str`, found `String`
    |                                    |
    |                                    arguments to this method are incorrect
    |
note: method defined here
   --> /usr/src/debug/rust/rustc-1.91.1-src/library/alloc/src/string.rs:1112:12
help: consider borrowing here
    |
417 |             state.temp_edit_buffer.push_str(&text);
    |                                             +

error[E0271]: expected `{closure@main.rs:643:24}` to return `Option<Event>`, but it returns `()`
   --> src/main.rs:644:13
    |
643 |           let callback = move |event: rdev::Event| {
    |                          ------------------------- this closure
644 | /             if let rdev::EventType::KeyPress(_) = event.event_type {
645 | |                 // Use event.name which provides a string representation of the key.
646 | |                 if let Some(key_str) = event.name {
647 | |                     *key_arc.lock().unwrap() = Some(key_str);
...   |
651 | |             }
    | |_____________^ expected `Option<Event>`, found `()`
...
655 |           if let Err(error) = rdev::grab(callback) {
    |                               ---------- -------- closure used here
    |                               |
    |                               required by a bound introduced by this call
    |
    = note:   expected enum `std::option::Option<rdev::Event>`
            found unit type `()`
note: required by a bound in `grab`
   --> /home/hitler/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/rdev-0.5.3/src/lib.rs:362:21
    |
360 | pub fn grab<T>(callback: T) -> Result<(), GrabError>
    |        ---- required by a bound in this function
361 | where
362 |     T: Fn(Event) -> Option<Event> + 'static,
    |                     ^^^^^^^^^^^^^ required by this bound in `grab`

Some errors have detailed explanations: E0061, E0271, E0282, E0308.
For more information about an error, try `rustc --explain E0061`.
error: could not compile `ctrlset` (bin "ctrlset") due to 4 previous errors
